[package]
name = "clipper-sys"
version = "0.2.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/clipper-sys"
documentation = "https://docs.rs/clipper-sys/"
description = "Boolean operations on polygons (Clipper wrapper)"
keywords = ["polygon", "boolean", "clip", "clipper"]
categories = ["algorithms", "external-ffi-bindings"]

[build-dependencies]
bindgen = "0.53.1"
cmake = "0.1.42"
